<resources>
    <string name="app_name" translatable="false">NotificationTimer</string>
    <string name="feedback">Send feedback…</string>
    <string name="rateApp">Rate Application</string>
    <string name="setsTimerReset">Reset timer number</string>
    <string name="help">Indications</string>
    <string name="settings">Settings</string>
    <string name="keepScreenOn">Keep Screen On</string>
    <string name="presets">Presets</string>
    <string name="default_timer_name">Timer</string>
    <string name="presetsListEmpty">Timers list empty</string>
    <string name="notification_permission_denied">Insufficient permission to use notifications, check settings</string>
    <string name="picker_timer">Timer</string>
    <string name="picker_sets">Timers number limit</string>
    <string name="picker_timer_get_ready">Extra notification time</string>
    <string name="picker_split_screen">Increase the height of the window to create a timer</string>
    <string name="select_preset">Are you sure you want to stop the current timer to select this one?</string>
    <string name="delete_preset">Are you sure you want to delete the selected timer?</string>
    <string name="reset_preset">Are you sure you want to reinitialize the limit indicator?</string>
    <string name="clear_preset">Are you sure you want to clear the current timer and reinitialize the timer number or limit indicator?</string>
    <string name="alert_time_out">"Time out!"</string>
    <string name="alert_set_done">"Would you like to launch the next timer?"</string>
    <string name="alert_all_set_done">"Which action would you like to do next?"</string>
    <string name="alert_extra_set">EXTRA TIMER</string>
    <string name="alert_reset">REINITIALIZE</string>
    <string name="alert_clear">RESET</string>
    <string name="alert_yes">YES</string>
    <string name="alert_no">NO</string>
    <string name="alert_stop_asking">STOP ASKING</string>
    <string name="notif_timer_done">Time out!</string>
    <string name="notif_channel_done" translatable="false">Time out</string>
    <string name="notif_channel_ready" translatable="false">Extra notification</string>
    <string name="notif_channel_update" translatable="false">Timer update</string>
    <string name="help_tap_to_quit">Press to quit indications</string>
    <string name="notification">Notification</string>
    <string name="extra_notification">Extra Notification</string>
    <string name="customization">Customization</string>
    <string name="backup">Backup</string>
    <string name="extra_notification_summary">Extra notification before the end of the timer</string>
    <string name="timer_plus">Step time increment</string>
    <string name="timer_minus">Step time decrement</string>
    <string name="sets_pref_category">Timer information</string>
    <string name="sets_name_display_enable">Display timer name</string>
    <string name="sets_name_display_enable_summary">Display the timer name on top of the running timer</string>
    <string name="sets_number_display_enable">Display current timer number</string>
    <string name="sets_number_display_enable_summary">Display current running timer number. Always displayed when there is a limit indicator</string>
    <string name="sets_number_reset">Timer number reset</string>
    <string name="sets_number_reset_summary">Reset the timer number when starting a new timer. Works only with timers without limit indicator</string>
    <string name="reset">Limit indicator reinitialization</string>
    <string name="reset_summary">Reinitialize the timer number with timers with limit indicator. Use long press to reinitialize the timer</string>
    <string name="sets_picker_enable">Limit indicator</string>
    <string name="sets_picker_enable_summary">Add the possibility to enter a limit indicator for the timer number during the timer creation</string>
    <string name="preset_select_asking">Timer selection alert</string>
    <string name="preset_select_asking_summary">Display an alert dialog when selecting a new timer in the list if the current timer is running</string>
    <string name="clear_asking">Timer reinitialization alert</string>
    <string name="clear_asking_summary">Display an alert dialog when clearing and reinitializing the current running timer</string>
    <string name="step_time">Step time</string>
    <string name="step_time_increment">%1$d seconds increment</string>
    <string name="step_time_decrement">%1$d seconds decrement</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_on">Vibration on</string>
    <string name="vibrate_off">Vibration off</string>
    <string name="vibrate_summary">Vibrate when the time is out</string>
    <string name="ringtone">Sound</string>
    <string name="channel">Sound and vibration</string>
    <string name="light_color_enable">Light</string>
    <string name="light_color_enable_summary">Light when the time is out</string>
    <string name="light_color">Light color</string>
    <string name="light_color_summary">Light color when the time is out</string>
    <string name="light_flash_rate">Light flash rate</string>
    <string name="enable">Enable</string>
    <string name="get_ready_time">Time</string>
    <string name="get_ready_time_summary">Notification will occur %1$d:%2$02d before the end of the timer</string>
    <string name="vibrate_summary_get_ready">Vibrate at the extra notification</string>
    <string name="color_enable">Notification background color</string>
    <string name="color_enable_summary">Apply the following colors to the notification background</string>
    <string name="color_running">Running color</string>
    <string name="color_running_summary">Background color while running</string>
    <string name="color_ready">Ready color</string>
    <string name="color_ready_summary">Background color after the extra notification</string>
    <string name="color_done">Done color</string>
    <string name="color_done_summary">Background color when the time is out</string>
    <string name="preferences_backup">Backup</string>
    <string name="preferences_backup_summary">Backup settings and timers on this device</string>
    <string name="preferences_restore">Restore</string>
    <string name="preferences_restore_summary">Restore settings and timers from this device</string>
    <string name="preferences_backup_error">Error while creating the file</string>
    <string name="preferences_backup_success">Backup successful</string>
    <string name="preferences_restore_no_file">No backup file found</string>
    <string name="preferences_restore_success">Restore successful</string>
    <string name="preferences_permission_denied">Insufficient permissions</string>
    <string name="preferences_notification_permission_denied">Insufficient permissions, click to enable</string>
    <string name="preferences_permission_granted">Sufficient permissions</string>
    <string name="preferences_backup_override">Would you like to override existing backup?</string>
    <string name="preferences_notification_summary">Configure sound and more from the system settings</string>
    <string name="preferences_background_theme">Background theme</string>
    <string name="preferences_dark_theme">Application theme</string>
    <string name="preferences_external_media">- External media - Grant storage access from the system application permissions to display the title</string>
    <string name="preferences_notification_permission">Permission</string>
    <string name="pref_timer_minus" translatable="false">timerMinus</string>
    <string name="pref_timer_plus" translatable="false">timerPlus</string>
    <string name="pref_sets_number_display_enable" translatable="false">setNumberDisplayEnable</string>
    <string name="pref_sets_name_display_enable" translatable="false">setsNameLayoutDisplayEnable</string>
    <string name="pref_sets_picker_enable" translatable="false">setPickerEnable</string>
    <string name="pref_sets_number_reset" translatable="false">setNumberReset</string>
    <string name="pref_step_time" translatable="false">stepTime</string>
    <string name="pref_vibrate" translatable="false">vibrate</string>
    <string name="pref_ringtone_uri" translatable="false">ringtoneUri</string>
    <string name="pref_done_channel" translatable="false">doneChannel</string>
    <string name="pref_notification_permission" translatable="false">notificationPermission</string>
    <string name="pref_light_color_enable" translatable="false">lightColorEnable</string>
    <string name="pref_light_color" translatable="false">lightColor</string>
    <string name="pref_light_flash_rate" translatable="false">lightFlashRate</string>
    <string name="pref_timer_get_ready_enable" translatable="false">timerGetReadyEnable</string>
    <string name="pref_timer_get_ready" translatable="false">timerGetReady</string>
    <string name="pref_timer_get_ready_vibrate" translatable="false">timerGetReadyVibrate</string>
    <string name="pref_timer_get_ready_ringtone_uri" translatable="false">timerGetReadyRingtone</string>
    <string name="pref_ready_channel" translatable="false">readyChannel</string>
    <string name="pref_preset_select_asking" translatable="false">selectAsking</string>
    <string name="pref_clear_asking" translatable="false">clearAsking</string>
    <string name="pref_reset" translatable="false">resetButton</string>
    <string name="pref_preset_array" translatable="false">presetArray_</string>
    <string name="pref_preset_array_timer" translatable="false">presetArray_%1$d_timer</string>
    <string name="pref_preset_array_sets" translatable="false">presetArray_%1$d_sets</string>
    <string name="pref_preset_array_name" translatable="false">presetArray_%1$d_name</string>
    <string name="pref_preset_array_displayMode" translatable="false">presetArray_%1$d_displayMode</string>
    <string name="pref_timer_service" translatable="false">timerService_</string>
    <string name="pref_timer_service_timer_end" translatable="false">timerService_timerEnd</string>
    <string name="pref_timer_service_timer_current" translatable="false">timerService_timerCurrent</string>
    <string name="pref_timer_service_timer_user" translatable="false">timerService_timerUser</string>
    <string name="pref_timer_service_sets_current" translatable="false">timerService_setsCurrent</string>
    <string name="pref_timer_service_sets_user" translatable="false">timerService_setUser</string>
    <string name="pref_timer_service_name_user" translatable="false">timerService_nameUser</string>
    <string name="pref_timer_service_displayMode" translatable="false">timerService_displayMode</string>
    <string name="pref_timer_service_state" translatable="false">timerService_state</string>
    <string name="pref_timer_service_main_activity_visible" translatable="false">timerService_mainActivityVisible</string>
    <string name="pref_custom_color_enable" translatable="false">colorEnable</string>
    <string name="pref_custom_color_running" translatable="false">colorRunning</string>
    <string name="pref_custom_color_ready" translatable="false">colorReady</string>
    <string name="pref_custom_color_done" translatable="false">colorDone</string>
    <string name="pref_timer_text" translatable="false">timerText_</string>
    <string name="pref_timer_text_size" translatable="false">timerText_size_%1$d_%2$d</string>
    <string name="pref_backup" translatable="false">preferencesBackup</string>
    <string name="pref_restore" translatable="false">preferencesRestore</string>
    <string name="pref_background_theme_mode" translatable="false">backgroundThemeMode</string>
    <string name="pref_dark_theme_mode" translatable="false">darkThemeMode</string>
    <string name="pref_first_run" translatable="false">firstRun_10400</string>
    <string name="timer_separator" translatable="false">:</string>
</resources>