<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Preset folding display option -->
    <item
        android:id="@+id/presets_display"
        android:icon="@drawable/ic_action_down"
        android:title="@string/presets"
        android:visible="true"
        app:showAsAction="always"/>

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/ic_settings_white_small_48dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/keepScreenOn"
        android:title="@string/keepScreenOn"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>